--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,7 @@ body {
 
 .cell, .editorCell {
     border-radius: 8px;
+    border: #000000 1px solid;
     background-color: #1a1a1a;
     transition: background-color 0.25s;
     position: relative;
@@ -60,6 +61,15 @@ body {
 */
 .goal {
     box-shadow: inset 0 0 25px 2px #00ff00, inset 0 0 20px 20px #5b510aaa;
+}
+.goal::before {
+    content: "🏁";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 5vmin;
+    z-index: 999;
 }
 
 .cell:hover, .editorCell:hover {
@@ -87,7 +97,7 @@ body {
 }
 
 .ui {
-    width: 13vmin;
+    width: 15vmin;
     padding: 1vmin 1vmin;
     border-radius: 10px;
     backdrop-filter: blur(30px);
@@ -168,4 +178,9 @@ input[type=number] {
 
 main:focus {
     outline: none;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
 }
