--- a/src/style.css
+++ b/src/style.css
@@ -194,3 +194,12 @@ main:focus {
     opacity: 0;
     pointer-events: none;
 }
+
+#title {
+    position: absolute;
+    top: 5vh;
+    z-index: 9999;
+    font-size: 2.5rem;
+    width: 25vmin;
+    text-align: center;
+}
